feat(core): ampliar AuthResponse y optimizar autenticación; mejorar OrdenResponse y obtenerOrdenPorCliente